--- a/FastFood-challenge/src/app/kitchen/kitchen.component.html
+++ b/FastFood-challenge/src/app/kitchen/kitchen.component.html
@@ -1,5 +1,4 @@
-<div class="container mt-3">
-    <hr>
+<div class="container mt-3 p-5 border border-black">
     <h1>Componente Cocina</h1>
     <h3>Pendiente de cocinar</h3>
     <ul class="border border-dark p-3">
